--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
-        <link rel="stylesheet" href="bootstrap.css">
+        <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid p-4">
-              <a class="navbar-brand text-white fw-bold" href="#">Bootstrap Practice</a>
+              <a class="navbar-brand text-white fw-bold" href="#">Bootstrap-Practice</a>
               <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
